--- a/src/application/application.css
+++ b/src/application/application.css
@@ -1,1 +1,16 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+.redBackground{
+    -fx-background-color: #FFAAAA;
+}
+
+.blueBackground{
+    -fx-background-color: #D5D5FF;
+}
+
+.yellowBackground{
+    -fx-background-color: #FFEEAA;
+}
+
+.greenBackground{
+    -fx-background-color: #BBFFAA;
+}
+
